Wed May 06 11:11:48 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix serialisation of query_difference
	  queries, and add an optional "weight" parameter to query_all().

Mon Apr 20 12:54:07 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,xappy/unittests/field_associations.py: Add
	  "link_associations" parameter to STORE_CONTENT.  Defaults to
	  True, but if False this stops associated field data being stored
	  as an extra item in the document contents.  Use this if you don't
	  want to use relevant_data() with simple=False.

Wed Apr 15 13:06:41 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py: Remove unneccessary use of enumerate - thanks
	  to Shane Evans for spotting it.

Wed Apr 15 10:12:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Improve calculation of range terms to
	  use to use a tighter bound when it can.

Wed Apr 15 10:02:00 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py: Add internal function to highlighter to count
	  the number of words.

Tue Apr 07 10:13:59 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Use ranges from FACET action in
	  query_range(), if they're not available from the
	  SORT_AND_COLLAPSE action.

Tue Apr 07 10:02:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_accel.py,xappy/unittests/range_speed.py:
	  Update to test the new range acceleration implementation.

Tue Apr 07 10:00:47 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Improvements to the range
	  acceleration; use a superset of terms covering the range if
	  possible, and AND this with the range restriction.  Also, if the
	  terms cover the range exactly, don't bother with the VALUE_RANGE
	  part.

Thu Apr 02 17:54:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
