@@ -1,3 +1,8 @@
+Wed May 06 11:20:13 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/query_all.py: Add test of new weight parameter
+	  for query all.
+
 Wed May 06 11:11:48 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Fix serialisation of query_difference
